--- a/styles.css
+++ b/styles.css
@@ -100,12 +100,85 @@ header#main-header div.side button {
 }
 
 div.banner {
-    height: 360px;
+    height: 300px;
     width: 100%;
     background: #3bb9e3;
-    
     display: flex;
     align-items: center;
     justify-content: center;
     color: #fff;
+}
+
+div.bar {
+    height: 59px;
+    background: #FFF;
+    box-shadow: 0 1px 3px rgb(0, 0, 0, 0.25);
+}
+
+div.bar .content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 285px;
+    height: 100%;
+}
+
+div.bar .content ul {
+    list-style: none;
+    display: flex;
+    height: 100%;
+}
+
+div.bar .content ul li {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 15px;
+    position: relative;
+}
+
+div.bar .content ul li.active::after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: #3bb9e3;
+}
+
+div.bar .content ul li span {
+    color: #667580;
+    font-size: 12px;
+    font-weight: bold;
+} 
+
+div.bar .content ul li strong {
+    font-size: 18px;
+    color: #667580;
+    font-weight: bold;
+    margin-top: 2px;
+}
+
+div.bar .content .actions {
+    display: flex;    
+}
+
+div.bar .content .actions button {
+    height: 34px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 90px;
+    font-weight: bold;
+    font-size: 14px;
+    color: #3bb9e3;
+    background-color: #FFF;
+    border: 1px solid #3bb9e3;
+    border-radius: 16px;
+    margin-right: 20px;
 }
